# roscon2025_control_workshop

./: .clang-format  .pre-commit-config.yaml  README.md
.github/workflows/: build_and_publish_docker.yaml
embedded-mobile-base/: .gitignore  README.md  platformio.ini
embedded-mobile-base/include/: my_ros_message_types.h
embedded-mobile-base/src/: main.cpp
embedded_board/mobile_base_esp32/: mobile_base.ino  platformio.ini
embedded_board/mobile_base_esp32/src/: serial.ino
jointstate_publisher/: README.md  platformio.ini
jointstate_publisher/config/ucdr/: config.h
jointstate_publisher/include/: my_ros_message_types.h
jointstate_publisher/src/: main.cpp
mobile_manipulaotor/: README.md
mobile_manipulator/: README.md
odom_publisher/: README.md  platformio.ini
odom_publisher/include/: my_ros_message_types.h
odom_publisher/src/: main.cpp
twist_publisher/: README.md  platformio.ini  sdkconfig.esp32-s3-devkitc-1
twist_publisher/config/ucdr/: config.h
twist_publisher/include/: my_ros_message_types.h
twist_publisher/src/: main.cpp
zenoh_host/: docker-compose.yaml
zenoh_host/docker/: Dockerfile
zenoh_host/wbot_bringup/: CMakeLists.txt  package.xml  wbot_plotjuggler.xml
zenoh_host/wbot_bringup/config/: wbot_controllers.yaml  wbot_manipulator_controllers.yaml
zenoh_host/wbot_bringup/launch/: wbot.launch.xml  wbot_manipulator.launch.xml
zenoh_host/wbot_bringup/rviz/: robotmodel.rviz
zenoh_host/wbot_description/: CMakeLists.txt  package.xml
zenoh_host/wbot_description/launch/: robotmodel.rviz  show.launch.xml  (+1 more)
(+6 files in other folders)
